# hackflare

./: .dockerignore  Dockerfile.combined  compose.combined.yml  compose.dev.yml  hackflare_supervisord.conf
.github/ISSUE_TEMPLATE/: bug_report.md
.github/docs/: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ROADMAP.md  SECURITY.md
.github/workflows/: audit.yml  ci.yml  codeql.yml  daily-checks.yml  docker-backend.yml  docker-combined.yml  docker-frontend.yml  labeler.yml
database/.sqlx/: query-481d61859d340afb79d632af2c2c5fd47f57dd90a5c311bffdaf65917a7077ef.json  query-82b186062511a0e65d50313f81d8103cb4a67b856e103c9b28dbfbbe6b364e26.json  query-83052467433e7584c85e669c497fe5e2eab2359a953f5864bc81afe51085e5d8.json  query-d8da144de3035b0974cb2a7f1f79db37e71725c0879f334735c72ce7fcf3554b.json  query-e5002e5f22ba990affa38263002c0d258c63e69c3b1c8bd01ee9bba8ffdbc883.json
database/migrations/: 20260515115012_create_users.up.sql  20260515180024_create_user_sessions.up.sql  20260518120000_create_dns_tables.up.sql  20260530000000_create_config_overrides.down.sql  20260530000000_create_config_overrides.up.sql  20260530010000_create_api_keys.up.sql
deployment/: Dockerfile.combined  compose.combined.yml  compose.dev.yml  compose.prod.yml
docs/: ROADMAP.md
frontend/: package-lock.json  package.json
frontend/app/: root.tsx  routes.ts
frontend/app/components/: app-sidebar.tsx
frontend/app/components/icons/: github.tsx  google.tsx
frontend/app/layouts/: sidebar-layout.tsx
frontend/app/lib/: api.ts  toast.tsx
frontend/app/routes/: 502.tsx  login.tsx
frontend/app/routes/auth/: hackclub-callback.tsx
frontend/app/routes/dash/admin/: page.tsx
frontend/app/routes/dash/domains/: page.tsx
frontend/app/routes/dash/domains/$domain/dns/: page.tsx
frontend/app/routes/dash/help/: page.tsx
frontend/app/routes/dash/profile/: page.tsx
frontend/app/routes/dash/settings/: page.tsx
frontend/server/: index.js
hackflare_api/: Cargo.toml  Dockerfile
hackflare_api/src/: config.rs  state.rs
hackflare_api/src/middlewares/: auth.rs
hackflare_api/src/models/: db.rs  mod.rs
hackflare_api/src/routes/: admin.rs  auth.rs  dns.rs  logs.rs  mod.rs  settings.rs  slack.rs  users.rs
hackflare_api/src/services/: api_keys.rs  config_overrides.rs  mod.rs
hackflare_dns/: Cargo.toml
hackflare_dns/src/dns/recursive/: cache.rs  hints.rs  message.rs  mod.rs  resolver.rs  transport.rs
migrations/: 20260519100000_make_slack_id_nullable.down.sql  20260519100000_make_slack_id_nullable.up.sql
