[package]
name = "hackflare-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
dotenvy = "0.15.7"
reqwest = { version = "0.13.3", features = ["form", "json"] }
rand = "0.10.1"
anyhow = "1.0.102"
tower-sessions = "0.15.0"
tower-http = { version = "0.6.10", features = ["trace"] }
serde_with = { version = "3.20.0", features = ["chrono_0_4"] }
chrono = { version = "0.4.44", features = ["serde"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "ipnet", "uuid"] }
derive_more = { version = "2.1.1", features = ["full"] }
axum-client-ip = "1.3.1"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
hackflare-dns = { path = "../hackflare_dns" }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
