[package]
name = "hackflare-api"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]

# Web Framework
axum = { version = "0.8.6", features = ["macros"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
axum-client-ip = "1.3.1"
tower-sessions = "0.15.0"
tower-http = { version = "0.6.10", features = ["trace"] }

## Async runtime
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "std", "logging"] }

# Serialization / types
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = { version = "3.20.0", features = ["chrono_0_4"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std", "serde"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }

# Auth
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["hmac", "rust_crypto"] }

# Database
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "postgres", "chrono", "ipnet", "uuid", "migrate", "derive"] }

# Observability
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }

# Misc
hex = "0.4.3"
rand = "0.10.1"
sha2 = "0.10.8"
anyhow = "1.0.102"
derive_more = { version = "2.1.1", features = ["display", "error"] }
dotenvy = "0.15.7"

# Internal
hackflare-dns = { path = "../hackflare_dns" }

# DNS protocol parsing
hickory-proto = "0.26"

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
