[package]
name = "hackflare-dns"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
name = "hackflare_dns"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
hickory-server = "0.26.1"
parking_lot = "0.12"
rand = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "derive"] }
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "time"] }
